2012-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* config/axiom-c-macros.h: Rename to
	config/fricas_c_macros.h.
	Adjust other files.

2012-10-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-boot.boot: Minor cleanup.

2012-10-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/s-parser.boot,
	src/interp/parsing.lisp, src/interp/msgdb.boot,
	src/interp/scwrap2.boot, src/interp/server.boot:
	A small speedup.

2012-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in, src/interp/util.lisp,
	src/interp/simpbool.boot, src/interp/nlib.lisp,
	src/interp/g-boot.boot, src/interp/macros.lisp,
	src/interp/define.boot, src/interp/spad.lisp:
	Misc cleanups.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/scan.boot,
	src/interp/s-parser.boot, src/interp/bootlex.lisp,
	src/interp/parsing.lisp: Use interpreter scanner for Spad.
	src/interp/preparse.lisp: Remove.
	src/interp/Makefile.in: Adjust.
	src/algebra/skpol.spad.pamphlet: Work around changed
	pile rules.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/setvart.boot, src/interp/i-toplev.boot,
	src/interp/lisplib.boot: Minor fixes.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/c-util.boot,
	src/interp/msgdb.boot, src/interp/vmlisp.lisp,
	src/interp/spaderror.lisp: Minor cleanups.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/solvedio.spad.pamphlet: Do not use 'free'
	as identifier.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/algfunc.spad.pamphlet: Add 'rootSum'.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: findLinearRelation2():
	Avoid division by zero.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genser.spad.pamphlet: Really remove leading