@@ -1,5 +1,11 @@
 2012-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/functor.boot, src/interp/i-syscmd.boot,
+	src/interp/scwrap2.boot, src/interp/clammed.boot,
+	src/lib/cfuns-c.c: Misc cleanups.
+
+2012-10-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* config/axiom-c-macros.h: Rename to
 	config/fricas_c_macros.h.
 	Adjust other files.
